data/derived/fa15/progs/unify/prog1320.ml.out
Characters 110-136:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
